style.css
/* ... */
.bold-link {
    font-weight: 900;
    text-decoration: underline!important;
}

.bgc-white {
    background-color: #FFFFFF;
}

.bgc-atomic-tangerine {
    background-color: #F3976C;
}

.tc-white {
    color: #f1bd80!important;
}
.Texte-entete{
    background-color:#364577;
    color: #ffffff;
    text-overflow: clip;
    padding: 15px;
    margin: auto;
}

.black-20>li>a,
.black-20{
    color: black!important;
    font-size: 20px;
}

.black-20-g{
    color: black!important;
    font-weight: 800;
    font-size: 20px;
}

.btn-atomic-tangerine {
    background: #F3976C;
    color: #000000!important;
}
    
.btn-atomic-tangerine:hover {
    background: #c27956!important;

}

.ltc-white {
    color: #FFFFFF!important;
}

.ltc-white:hover {
    color: #cccccc!important;
}

.ltc-atomic-tangerine {
    color: #F3976C!important;
}

.ltc-atomic-tangerine:hover {
    color: #c27956!important;
}

.icon-dark-slate-blue {
    color: #364577!important;
    border-color: #364577!important;
}

.bg-dots-bg {
    background-image: url("img/dots-bg.png");
}

.bg-lines-h2-bg {
    background-image: url("img/lines-h2-bg.png");
}

.bg-banniere {
    background-image: url("img/la-chouette-agence-banniere.avif");
}

.bloc7{
    display: flex;
    flex-wrap: wrap;
}

.bloc7-1,.bloc7-2{
    width: 100%;
    margin: 0px 10px;
}
/*
.btn7{
    width: fit-content;
}
*/
/*-----------------------------------------------------*/
/* ---------GESTION DES FOCUS ET SURVOL SOURIS ----------*/
/*-----------------------------------------------------*/

.navbar-toggle:hover,
.navbar-toggle:focus,
.navbar-brand:hover,
.navbar-brand:focus,
nav>ul>li>a:hover,
nav>ul>li>a:focus{
    border:solid #364577;   
    transform: scale(1.05);                 
}
.col-sm-6>a:hover,
.col-sm-6>a:focus{      
    border: dashed #364577;
    border-width: 5px;        
}
/*-----------------------------------------------------*/
/* --------- AFFICHAGE SUIVANT ECRAN ----------*/
/*-----------------------------------------------------*/

@media (max-width: 400px) {

    #bloc-1-hero{
        background-image: url("img/image-de-presentation-1.avif");
    }

    .bloc {
        padding-left: 0;
        padding-right: 0;
    }
}
@media (max-width: 767px) {
    .page-container {
        overflow-x: hidden;
        position: relative;
    }
    h1,
    h2, 
    h3,
    h4,
    h5,
    h6,
    p,
    #disqus_thread {
        padding-left: 10px!important;
        padding-right: 10px!important;
    }
      .navbar .nav {
        padding-top: 0;
        border-top: 1px solid rgba(0, 0, 0, .2);
        float: none!important;
    }
    .navbar.row {
        margin-left: 0;
        margin-right: 0;
    }
    .site-navigation {
        position: inherit;
        transform: -moz-none;
        -webkit-transform: none;
        -ms-transform: none;
    }
    .nav > li {
        margin-top: 0;
        border-bottom: 1px solid rgba(0, 0, 0, .1);
        background: rgba(0, 0, 0, .05);
        text-align: left;
        padding-left: 15px;
        width: 100%;
    }
    .nav > li:hover {
        background: rgba(0, 0, 0, .08);
    }

    .dropdown .dropdown a .caret {
        float: none;
        margin: 5px 0 0 10px!important;
        border: 4px solid black;
        border-bottom-color: transparent;
        border-right-color: transparent;
        border-left-color: transparent;
    }
    #hero-bloc .navbar .nav {
        background: rgba(0, 0, 0, .8);
    }
    #hero-bloc .navbar .nav a {
        color: rgba(255, 255, 255, .6);
    }
    .hero {
        padding: 50px 0;
    }
    .hero-nav {
        left: -1px;
        right: -1px;
    }
    

    .navbar-collapse {
        padding: 0;
        overflow-x: hidden;
        box-shadow: none;
    }
    .navbar-brand img {
        max-height: 40px;
        width: auto;
    }
    .nav-invert .navbar-header {
        float: none;
        width: 100%;
    }
    .nav-invert .navbar-toggle {
        float: left;
        margin-left: 10px;
    }

    .bloc-mob-center-text{
        text-align: center;
    }
    .bloc {
        padding-left: 0;
        padding-right: 0;
    }
    .bloc-xxl,
    .bloc-xl,
    .bloc-lg {
        padding: 40px 0;
    }
    .bloc-sm,
    .bloc-md {
        padding-left: 0;
        padding-right: 0;
    }
    .bloc-tile-2 .container,
    .bloc-tile-3 .container,
    .bloc-tile-4 .container,
    .bloc-fill-screen .fill-bloc-top-edge,
    .bloc-fill-screen .fill-bloc-bottom-edge {
        padding-left: 0;
        padding-right: 0;
    }
    .a-block {
        padding: 0 10px;
    }
    .btn-dwn {
        display: none;
    }
    .voffset {
        margin-top: 5px;
    }
    .voffset-md {
        margin-top: 20px;
    }
    .voffset-lg {
        margin-top: 30px;
    }
    form {
        padding: 5px;
    }
    .close-lightbox {
        display: inline-block;
    }
    .blocsapp-device-iphone5 {
        background-size: 216px 425px;
        padding-top: 60px;
        width: 216px;
        height: 425px;
    }
    .blocsapp-device-iphone5 img {
        width: 180px;
        height: 320px;
    }
}
@media (max-width: 991px) {
    .container {
        width: 100%;
    }
    .b-parallax {
        background-attachment:fixed;
    }
    .page-container,
    #hero-bloc {
        overflow-x: hidden;
        position: relative;
    }
    .bloc-group,
    .bloc-group .bloc {
        display: block;
        width: 100%;
    }
    .bloc-fill-screen .fill-bloc-top-edge,
    .bloc-fill-screen .fill-bloc-bottom-edge {
        padding: 0 20px;
    }
}
@media (max-width: 1024px) {
    .bloc {
        padding-left: 20px;
        padding-right: 20px;
    }
    .bloc.full-width-bloc,
    .bloc-tile-2.full-width-bloc .container,
    .bloc-tile-3.full-width-bloc .container,
    .bloc-tile-4.full-width-bloc .container {
        padding-left: 0;
        padding-right: 0;
    }
}
/* ... */

